diff for shahbudin
Former-commit-id: c7ee519748ed68ba1068b2ead6df772049671f2c

--- a/subjects/apps/shahbudindotcom.net/counter.websiteout.net/js/5/8/50096986/0.html
+++ b/subjects/apps/shahbudindotcom.net/counter.websiteout.net/js/5/8/50096986/0.html
@@ -1,1 +1,1 @@
-No Content: https://counter.websiteout.net/js/5/8/50096986/0
+document.write('<a href="https://www.websiteout.net/counter.php"><img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=5&D=8&N=50096986&M=0" alt="web hit counter" border="0" /></a>');
