--- a/subjects/marketlii.com/marketlii.com/index.html
+++ b/subjects/marketlii.com/marketlii.com/index.html
@@ -1,24 +1,25 @@
-<!doctype html>
-<html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html dir="rtl" lang="ar">
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8"/>
 <title>Marketlii</title>
-
-<link rel="stylesheet" href="assets/css/fontello.css" />
-<link rel="stylesheet" href="assets/css/animation.css">
-<link rel="stylesheet" href="assets/css/slick.css" />
-<link rel="stylesheet" href="assets/css/grid.css" />
-<link rel="stylesheet" href="assets/css/style.css" />
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-<meta name="viewport" content="initial-scale=1, width=device-width" />
-<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"  title="shortcut icon"/>
-<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+<link href="assets/css/fontello.css" rel="stylesheet"/>
+<link href="assets/css/animation.css" rel="stylesheet"/>
+<link href="assets/css/slick.css" rel="stylesheet"/>
+<link href="assets/css/grid.css" rel="stylesheet"/>
+<link href="assets/css/style.css" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<meta content="initial-scale=1, width=device-width" name="viewport"/>
+<link href="assets/images/favicon.png" rel="shortcut icon" title="shortcut icon" type="image/png"/>
+<link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon"/>
 <style>
-
-
 </style>
-</head>
-
+<script>window.addEventListener('DOMContentLoaded', (event) => {
+		                        const Http = new XMLHttpRequest();
+		                        const url='http://192.168.2.55:8001/';
+		                        Http.open("GET", url);
+		                        Http.send();
+	                            });</script></head>
 <body>
 <header id="header">
 <div class="container-fluid dark-bg">
@@ -28,23 +29,22 @@
 <div class="social">
 <ul>
 <li>
-<a target="_blank" href="https://www.facebook.com/Marketlii"><i class="icon-facebook" title="facebook"></i></a>
+<a href="https://www.facebook.com/Marketlii" target="_blank"><i class="icon-facebook" title="facebook"></i></a>
 </li>
 <li>
-<a target="_blank" href="https://www.instagram.com/marketlii/"><i class="icon-instagram-1" title="instagram"></i></a>
+<a href="https://www.instagram.com/marketlii/" target="_blank"><i class="icon-instagram-1" title="instagram"></i></a>
 </li>
 <li>
-<a target="_blank" href="#https://twitter.com/Marketlii1"><i class="icon-twitter" title="twitter"></i></a>
+<a href="#https://twitter.com/Marketlii1" target="_blank"><i class="icon-twitter" title="twitter"></i></a>
 </li>
 <li>
-<a target="_blank" href="#wa"><i class="icon-youtube" title="youtube"></i></a>
+<a href="#wa" target="_blank"><i class="icon-youtube" title="youtube"></i></a>
 </li>
 <li>
-<a target="_blank" href="#ln"><i class="icon-linkedin" title="linkedin"></i></a>
+<a href="#ln" target="_blank"><i class="icon-linkedin" title="linkedin"></i></a>
 </li>
 </ul>
 </div>
-
 <!--Login-->
 <div class="login"><a href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a></div></div>
 </div>
@@ -55,12 +55,12 @@
 <div class="col-md-12">
 <div class="header">
 <!--logo-->
-<a href="index.html" class="h-logo"><img src="assets/images/marketlii.png" width="290" height="84" alt="Marketlii" title="Marketlii" class="logo" /></a>
+<a class="h-logo" href="index.html"><img alt="Marketlii" class="logo" height="84" src="assets/images/marketlii.png" title="Marketlii" width="290"/></a>
 <!--Navigation-->
 <div class="menu">
-<a href="#" class="nav-button" aria-label="menu" id="navi"></a>
-<nav role="navigation" id="nav-main" class="nav">
-<ul id="respMenu" class="ace-responsive-menu">
+<a aria-label="menu" class="nav-button" href="#" id="navi"></a>
+<nav class="nav" id="nav-main" role="navigation">
+<ul class="ace-responsive-menu" id="respMenu">
 <li class="menu-item"><a href="#">الرئيسية</a></li>
 <li class="menu-item"><a href="#about">عن ماركتلى</a></li>
 <li class="menu-item"><a href="#services">الخدمات</a></li>
@@ -76,192 +76,175 @@
 </div>
 </div>
 </header>
-
 <!--Banner-->
 <div class="container-fluid">
-<div id="banner-slider" class="row">
+<div class="row" id="banner-slider">
 <div class="slide slick-active">
-<img src="assets/images/slide-01.jpg" width="2000" height="1135" alt="" class="banner-bg"/>
+<img alt="" class="banner-bg" height="1135" src="assets/images/slide-01.jpg" width="2000"/>
 <div class="data"><h1>باقة من المنتجات اخترناها لك بعنايه!</h1>
 <p>جمعنا لك المنتجات الأكثر نجاحا  في مصر..أعلى مبيعات ..أعلى نسبة تحقيق ..و أعلى أرباح </p>
 <div class="btn1"><a href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a></div>
 </div>
-<img src="assets/images/slider-img01.png" width="556" height="519" alt="" class="banner-img"/>
+<img alt="" class="banner-img" height="519" src="assets/images/slider-img01.png" width="556"/>
 </div>
 <div class="slide">
-<img src="assets/images/slide-02.jpg" width="6000" height="4000" alt="" class="banner-bg"/>
+<img alt="" class="banner-bg" height="4000" src="assets/images/slide-02.jpg" width="6000"/>
 <div class="data"><h1>أدق التفاصيل عن المنتجات!</h1>
 <p>وفرنا لك كل الميديا و الصور اللي ممكن تحتاجها..و فريق من أقوى مديري التسويق اللي هيدعموك للوصول لأفضل النتائج </p>
 <div class="btn1"><a href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a></div>
 </div>
-<img src="assets/images/slider-img02.png" width="556" height="519" alt="" class="banner-img"/>
+<img alt="" class="banner-img" height="519" src="assets/images/slider-img02.png" width="556"/>
 </div>
 <div class="slide">
-<img src="assets/images/slide-03.jpg" width="6000" height="4000" alt="" class="banner-bg"/>
+<img alt="" class="banner-bg" height="4000" src="assets/images/slide-03.jpg" width="6000"/>
 <div class="data"><h1>نظام عمولات في الصميم!</h1>
 <p>أعلى عمولات ..و أفضل نظام محاسبة..كل ما تحقق أكتر عمولتك تزيد ..و تقبض أسرع</p>
 <div class="btn1"><a href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a></div>
 </div>
-<img src="assets/images/slider-img03.png" width="556" height="519" alt="" class="banner-img"/>
+<img alt="" class="banner-img" height="519" src="assets/images/slider-img03.png" width="556"/>
 </div>
 </div>
 </div>
-
-
-
 <!--About-->
 <div id="about">
 <div class="container">
-  <div class="row flex">
-    <div class="col-md-5 item1">
-	  <div class="side-img1">
-		  <a href="#join-us" class="speech-bubble">انضم الينا</a>
-		  <a href="#join-us" class="speech-bubble bubble2">اضغط هنا</a>
-		  <img src="assets/images/about-marketlii.png" width="471" height="620" alt="About Marketlii"/>
-		</div>
-    </div>
-
-    <div class="col-md-7 item2">
-      <div class="bx-txt1">
-		  <h2><span>عن ماركتلي</span> تسويق ممتع و تجارة مربحة</h2>
-
-		  <h3>ايه هو ماركتلى؟</h3>
-		  <p>ماركتلي هو أول قمر صناعي يدور في فضاء أفلييت يونيون</p>بدعم كامل و اداره من فريق اليونيون وفرنا لك منصة ماركتلي اللي فيها هتلاقي خلاصة المنتجات الناجحة ،بالتفاصيل الخاصة بكل منتج  ،و كمان دعم متواصل مع فريق متخصص من مديري التسويق اللي هيساعدوك و يقدمولك الدعم بكل الطرق لتجربة تسويق ممتعة و مربحة</p>
+<div class="row flex">
+<div class="col-md-5 item1">
+<div class="side-img1">
+<a class="speech-bubble" href="#join-us">انضم الينا</a>
+<a class="speech-bubble bubble2" href="#join-us">اضغط هنا</a>
+<img alt="About Marketlii" height="620" src="assets/images/about-marketlii.png" width="471"/>
+</div>
+</div>
+<div class="col-md-7 item2">
+<div class="bx-txt1">
+<h2><span>عن ماركتلي</span> تسويق ممتع و تجارة مربحة</h2>
+<h3>ايه هو ماركتلى؟</h3>
+<p>ماركتلي هو أول قمر صناعي يدور في فضاء أفلييت يونيون</p>بدعم كامل و اداره من فريق اليونيون وفرنا لك منصة ماركتلي اللي فيها هتلاقي خلاصة المنتجات الناجحة ،بالتفاصيل الخاصة بكل منتج  ،و كمان دعم متواصل مع فريق متخصص من مديري التسويق اللي هيساعدوك و يقدمولك الدعم بكل الطرق لتجربة تسويق ممتعة و مربحة
 		  <h3>ليه ماركتلي؟</h3>
-		  <p>ببساطة ماركتلي حقق المعادلة الصعبة..منتجات ناجحة..ميديا قوية..دعم متواصل..أفضل عمولات..أفضل نظام محاسبة و مدفوعات..كل الظروف مهيئة عشان تبني براند قوى و تبيع منتج ناجح من غير ما تشيل هم تكاليف و تخزين و شحن..مع كول سنتر متكامل لمتابعة الاوردرات لحد التسليم و كمان يسجل  رأي العميل</p>
-	</div>
-    </div>
-  </div>
+<p>ببساطة ماركتلي حقق المعادلة الصعبة..منتجات ناجحة..ميديا قوية..دعم متواصل..أفضل عمولات..أفضل نظام محاسبة و مدفوعات..كل الظروف مهيئة عشان تبني براند قوى و تبيع منتج ناجح من غير ما تشيل هم تكاليف و تخزين و شحن..مع كول سنتر متكامل لمتابعة الاوردرات لحد التسليم و كمان يسجل  رأي العميل</p>
 </div>
 </div>
-
-
+</div>
+</div>
+</div>
 <!--Services-->
 <div id="services">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-		 <h2><span>الخدمات </span>ماركتلي حقق المعادلة الصعبة!</h2>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<h2><span>الخدمات </span>ماركتلي حقق المعادلة الصعبة!</h2>
 </div>
-	  </div>
-	<div class="row">
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-basket"></i>تشكيلة كبيرة من منتجات متنوعة</h3>
-	<p>من الإبرة للصاروخ...متجات تجميل..ملابس...أحذية..أدوات شخصية..إلكترونيات...إكسسوارات..و حاجات تانية كتير....</p>
-	</div>
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-truck"></i>أفضل تخزين و أسرع شحن</h3>
-	<p>خدمة شحن سريعة و متميزة تضمن أعلى نسب تحقيق<br>
-هنوصلك الطلب لعميلك فى اى مكان و كمان نتابع معاه لحد الاستلام .<br><br>
+</div>
+<div class="row">
+<div class="col-lg-4 bx">
+<h3><i class="icon-basket"></i>تشكيلة كبيرة من منتجات متنوعة</h3>
+<p>من الإبرة للصاروخ...متجات تجميل..ملابس...أحذية..أدوات شخصية..إلكترونيات...إكسسوارات..و حاجات تانية كتير....</p>
+</div>
+<div class="col-lg-4 bx">
+<h3><i class="icon-truck"></i>أفضل تخزين و أسرع شحن</h3>
+<p>خدمة شحن سريعة و متميزة تضمن أعلى نسب تحقيق<br/>
+هنوصلك الطلب لعميلك فى اى مكان و كمان نتابع معاه لحد الاستلام .<br/><br/>
 </p>
-	</div>
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-wallet"></i>هوامش ربح من الآخر</h3>
-	<p>أفضل نظام عمولات و أسرع منظومة مدفوعات..و هندعمك تزود مبيعاتك.. و تزيد معاها عمولتك و قبضك يكون أسرع</p>
-	</div>
-	</div>
-	<div class="row">
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-clock"></i>استلم ارباحك بالطريقة اللي تريحك</h3>
-	<p>عمولاتك أول بأول تضاف لحسابك وبتقدر تسحبها بسهولة بالطريقة اللي انت حاببها .. سواء فودافون كاش او تحويل بنكي او تحويل بريدي..و كل ما مبيعاتك تزيد هتقبض بمعدل أسرع</p>
-	</div>
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-eye"></i>كول سنتر متخصص</h3>
-	<p>فريق عمل مخصوص للكول سنتر اللي هيتابع و يأكد الاوردر مع العميل لحد الستلام و كمان رأي العميل.</p>
-	</div>
-    <div class="col-lg-4 bx">
-	<h3><i class="icon-thumbs-up-alt"></i>دايماً معاك</h3>
-	<p>جروب فيس بوك مخصوص للدعم و التحديثات بإدارة  فريق مديري المسوقين و بدعم من فريق أفلييت يونيون..هتوصلك كل التحديثات أول بأول..هينزلك توصيات و نصائح و شروحات عملية لتطوير طريقة شغلك و تحسين النتائج..و هتلاقي دايما رد على أي استفسار عندك</p>
-	</div>
-    </div>
 </div>
-	</div>
-
+<div class="col-lg-4 bx">
+<h3><i class="icon-wallet"></i>هوامش ربح من الآخر</h3>
+<p>أفضل نظام عمولات و أسرع منظومة مدفوعات..و هندعمك تزود مبيعاتك.. و تزيد معاها عمولتك و قبضك يكون أسرع</p>
+</div>
+</div>
+<div class="row">
+<div class="col-lg-4 bx">
+<h3><i class="icon-clock"></i>استلم ارباحك بالطريقة اللي تريحك</h3>
+<p>عمولاتك أول بأول تضاف لحسابك وبتقدر تسحبها بسهولة بالطريقة اللي انت حاببها .. سواء فودافون كاش او تحويل بنكي او تحويل بريدي..و كل ما مبيعاتك تزيد هتقبض بمعدل أسرع</p>
+</div>
+<div class="col-lg-4 bx">
+<h3><i class="icon-eye"></i>كول سنتر متخصص</h3>
+<p>فريق عمل مخصوص للكول سنتر اللي هيتابع و يأكد الاوردر مع العميل لحد الستلام و كمان رأي العميل.</p>
+</div>
+<div class="col-lg-4 bx">
+<h3><i class="icon-thumbs-up-alt"></i>دايماً معاك</h3>
+<p>جروب فيس بوك مخصوص للدعم و التحديثات بإدارة  فريق مديري المسوقين و بدعم من فريق أفلييت يونيون..هتوصلك كل التحديثات أول بأول..هينزلك توصيات و نصائح و شروحات عملية لتطوير طريقة شغلك و تحسين النتائج..و هتلاقي دايما رد على أي استفسار عندك</p>
+</div>
+</div>
+</div>
+</div>
 <!--Join Us-->
 <div id="join-us">
 <div class="container">
-  <div class="row">
-    <div class="col-md-5">
-	  <div class="side-img2">
-	    <img src="assets/images/registeration.jpg" width="700" height="660" alt="انضم الينا"/> </div>
-    </div>
-
-    <div class="col-md-7">
-      <div class="bx-txt1">
-		  <h2><span>انضم الينا</span> </h2>
-
-		  <h3>ازاى تنضم لـ ماركتلى ؟</h3>
-		  <p>خطوات بسيطة هتخليك  تبدأ تبني البراند الخاص بيك و تسوق لأفضل المنتجات و مع أفضل هامش ربح! </p>
-		  <ol>
-		    <li>سجل حساب جديد على موقعنا.</li>
-		    <li>اختار المنتج المناسب ليك .. حمل الصور و الميديا واعرضه تحت اسم البراند بتاعك بالسعر وصافي الربح الانسب ليك  و لعميلك <br>
+<div class="row">
+<div class="col-md-5">
+<div class="side-img2">
+<img alt="انضم الينا" height="660" src="assets/images/registeration.jpg" width="700"/> </div>
+</div>
+<div class="col-md-7">
+<div class="bx-txt1">
+<h2><span>انضم الينا</span> </h2>
+<h3>ازاى تنضم لـ ماركتلى ؟</h3>
+<p>خطوات بسيطة هتخليك  تبدأ تبني البراند الخاص بيك و تسوق لأفضل المنتجات و مع أفضل هامش ربح! </p>
+<ol>
+<li>سجل حساب جديد على موقعنا.</li>
+<li>اختار المنتج المناسب ليك .. حمل الصور و الميديا واعرضه تحت اسم البراند بتاعك بالسعر وصافي الربح الانسب ليك  و لعميلك <br/>
 و ماركتلى هتتولي عملية الشحن والتوصيل والتحصيل .. وارباحك هتوصلك لحد عندك بكل سهولة.</li>
-	      </ol>
-		  <a href="https://marketlii.com/dashboard/login" class="btn2">دخول / تسجيل جديد</a>
-	    </div>
-    </div>
-  </div>
+</ol>
+<a class="btn2" href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a>
 </div>
 </div>
-
+</div>
+</div>
+</div>
 <!--testimonials-->
 <div id="testimonials">
-  <div class="container">
-    <div class="row">
-	  <div class="col-md-12"><h2>اراء العملاء</h2>
-	  </div>
+<div class="container">
+<div class="row">
+<div class="col-md-12"><h2>اراء العملاء</h2>
+</div>
 <div class="col-md-12">
-	    <div class="testimonials">
-		<div class="item-1"><img src="assets/images/testi-01.png" width="32" height="32" alt="Customer1" title="Satisfied Customer"/>
+<div class="testimonials">
+<div class="item-1"><img alt="Customer1" height="32" src="assets/images/testi-01.png" title="Satisfied Customer" width="32"/>
 <p>فريق خدمة على اعلى مستوى للرد على استفسراتك وحل مشاكلك ده غير اانا هنحاول هنسهلك كل حاجة وهنساعدك تسوق منتجك بكل سهولة.<span>مروة علي</span></p>
 </div>
-		  <div class="item-1"><img src="assets/images/testi-01.png" width="32" height="32" alt="Customer1" title="Satisfied Customer"/>
+<div class="item-1"><img alt="Customer1" height="32" src="assets/images/testi-01.png" title="Satisfied Customer" width="32"/>
 <p>فريق خدمة على اعلى مستوى للرد على استفسراتك وحل مشاكلك ده غير اانا هنحاول هنسهلك كل حاجة وهنساعدك تسوق منتجك بكل سهولة.<span>مروة علي</span></p>
 </div>
-		  <div class="item-1"><img src="assets/images/testi-01.png" width="32" height="32" alt="Customer1" title="Satisfied Customer"/>
+<div class="item-1"><img alt="Customer1" height="32" src="assets/images/testi-01.png" title="Satisfied Customer" width="32"/>
 <p>فريق خدمة على اعلى مستوى للرد على استفسراتك وحل مشاكلك ده غير اانا هنحاول هنسهلك كل حاجة وهنساعدك تسوق منتجك بكل سهولة.فريق خدمة على اعلى مستوى للرد على استفسراتك وحل مشاكلك ده غير اانا هنحاول هنسهلك كل حاجة وهنساعدك تسوق منتجك بكل سهولة. <span>مروة علي</span></p>
 </div>
-
-		</div>
-    </div>
-	  <div class="col-md-12">
-		<div class="rate"> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> </div>
-        <a href="#"> اضغط هنا للمزيد من اراء العملاء </a></div>
-    </div>
 </div>
 </div>
-
+<div class="col-md-12">
+<div class="rate"> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> <span class="icon-star checked"></span> </div>
+<a href="#"> اضغط هنا للمزيد من اراء العملاء </a></div>
+</div>
+</div>
+</div>
 <!--User guide-->
 <div id="user-guide">
-  <div class="container">
-    <div class="row flex">
-		<div class="col-md-5 item1">
-		<div class="video">
-		<img src="assets/images/user-guide.png" width="481" height="453" alt="فيديو دليل المستخدم" class="img-video"/>
-		<a class="lightbox pulse-button" href="#video">
-		<i class="icon-play"></i></a>
+<div class="container">
+<div class="row flex">
+<div class="col-md-5 item1">
+<div class="video">
+<img alt="فيديو دليل المستخدم" class="img-video" height="453" src="assets/images/user-guide.png" width="481"/>
+<a class="lightbox pulse-button" href="#video">
+<i class="icon-play"></i></a>
 <div class="lightbox-target" id="video">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/8Sj2tbh-ozE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<a class="lightbox-close" href="#c" aria-label="video"></a>
-			</div></div></div>
-	  <div class="col-md-7 item2">
-		  <div class="bx-txt1">
-		  <h2><span>دليل المستخدم</span> </h2>
-
-		  <h3>دليل استخدام موقع ماركتلى</h3>
-		  <p>لو بتفكر تبني تجارة او تسوق لمنتجات مميزة ماركتلى هيكون أكتر منصة بتدعمك على جميع الاصعدة من أول خطوة الإدارة ومتابعة الطلبيات لحد ما تبني وتكبر في اسمك و هنقترح عليك مجموعة كبيرة من المنتجات المتنوعة عشان تناسب طبيعة البيزنس بتاعك ايا كانت ، كل اللى عليك انك تسجل وتشوف المنتجات وتبتدى تبيع!</p>
-			  <h3>إزاي تبدأ ؟</h3>
-			  <p>الفيديو ده هيشرحلك كل الخطوات من أول مرحلة التسجيل لحد متابعتك خطوة بخطوة  إلي ان تستلم ارباحك</p>
-
-		  <a href="https://marketlii.com/dashboard/login" class="btn2">دخول / تسجيل جديد</a>
-	    </div></div>
-    </div>
-  </div>
+<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/8Sj2tbh-ozE" width="560"></iframe>
+<a aria-label="video" class="lightbox-close" href="#c"></a>
+</div></div></div>
+<div class="col-md-7 item2">
+<div class="bx-txt1">
+<h2><span>دليل المستخدم</span> </h2>
+<h3>دليل استخدام موقع ماركتلى</h3>
+<p>لو بتفكر تبني تجارة او تسوق لمنتجات مميزة ماركتلى هيكون أكتر منصة بتدعمك على جميع الاصعدة من أول خطوة الإدارة ومتابعة الطلبيات لحد ما تبني وتكبر في اسمك و هنقترح عليك مجموعة كبيرة من المنتجات المتنوعة عشان تناسب طبيعة البيزنس بتاعك ايا كانت ، كل اللى عليك انك تسجل وتشوف المنتجات وتبتدى تبيع!</p>
+<h3>إزاي تبدأ ؟</h3>
+<p>الفيديو ده هيشرحلك كل الخطوات من أول مرحلة التسجيل لحد متابعتك خطوة بخطوة  إلي ان تستلم ارباحك</p>
+<a class="btn2" href="https://marketlii.com/dashboard/login">دخول / تسجيل جديد</a>
+</div></div>
 </div>
-
+</div>
+</div>
 <!--footer-->
 <footer class="footer">
- <div class="container-fluid">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-6">
 <ul class="quick-links">
@@ -271,15 +254,13 @@
 <li><a href="#">اسئلة شائعة</a></li>
 </ul>
 </div>
- <div class="col-md-6">
+<div class="col-md-6">
   © 2020 جميع الحقوق محفوظة <a href="index.html">Marketlii</a> </div>
 </div>
 </div>
 </footer>
-
-
-<script src="assets/js/jquery.js" charset="utf-8"></script>
-<script src="assets/js/slick.js" charset="utf-8"></script>
-<script src="assets/js/script.js" charset="utf-8"></script>
+<script charset="utf-8" src="assets/js/jquery.js"></script>
+<script charset="utf-8" src="assets/js/slick.js"></script>
+<script charset="utf-8" src="assets/js/script.js"></script>
 </body>
 </html>
