Fixed stylesheet source links for local host

--- a/subjects/hagley.org/hagley.org/index.html
+++ b/subjects/hagley.org/hagley.org/index.html
@@ -53,7 +53,7 @@
 <link href="//fonts.googleapis.com/css?family=Lato:400,100,300,700,900,400italic" rel="stylesheet" type="text/css"/>
 <link href="/sites/all/libraries/coverflow/style/carousel.css" rel="stylesheet"/>
 <link href="/sites/all/themes/hagley/css/jquery.mmenu.css" rel="stylesheet"/>
-<link href="//cdn.rawgit.com/noelboss/featherlight/1.4.1/release/featherlight.min.css" rel="stylesheet" type="text/css"/>
+<link href="cdn.rawgit.com/noelboss/featherlight/1.4.1/release/featherlight.min.css" rel="stylesheet" type="text/css"/>
 <script src="https://www.hagley.org/sites/default/files/js/js_uRCjUH1nf-b0kvBB1NZD5NFhEC1sf4b1IZSqjeXedX4.js"></script>
 <script src="https://www.hagley.org/sites/default/files/js/js_qE4KfYgJty9x7gyqzjMp9mcDiG6PQCqqJbfsBu7bK8w.js"></script>
 <script src="https://www.hagley.org/sites/default/files/js/js_kMg7W1sZANW-JVt-y1p4g6o0k68QXbUoYrBuKkRfQvo.js"></script>
