--- a/subjects/iliketubes.com/iliketubes.com/index.html
+++ b/subjects/iliketubes.com/iliketubes.com/index.html
@@ -36,9 +36,9 @@
 	  <link rel="stylesheet" href="//static.webclicks24.com/fonts/fontello-ie.css" media="all">
 	<![endif]-->
 <!--[if gt IE 8]><!-->
-<link href="//static.webclicks24.com/fonts/fontello.css" media="all" rel="stylesheet"/>
+<link href="static.webclicks24.com/fonts/fontello.css" media="all" rel="stylesheet"/>
 <!--<![endif]-->
-<link href="//static.webclicks24.com/fonts/fontello.css" media="all" rel="stylesheet"/>
+<link href="static.webclicks24.com/fonts/fontello.css" media="all" rel="stylesheet"/>
 <link href="/style.css?v150818" rel="stylesheet" type="text/css"/>
 <script src="//static.webclicks24.com/js/a.js" type="text/javascript"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
